# rust-template

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
src/: lib.rs
